syntax = "proto3";
package telemetry;

message BlockPayload {
  bytes dependencies = 1;
  bytes objects = 2;
}

message Block {
  string block_id = 1;
  string stream_id = 2;
  // we send both RFC3339 times and ticks to be able to calibrate the tick
  // frequency
  string begin_time = 3;
  int64 begin_ticks = 4;
  string end_time = 5;
  int64 end_ticks = 6;
  BlockPayload payload = 7;
  int32 nb_objects = 8;
}